--- a/snippets/product-media-gallery.liquid
+++ b/snippets/product-media-gallery.liquid
@@ -56,11 +56,15 @@
     <a class="skip-to-content-link button visually-hidden quick-add-hidden" href="#ProductInfo-{{ section.id }}">
       {{ 'accessibility.skip_to_product_info' | t }}
     </a>
+    <div class="dots">
+    
+    </div>
     <ul
       id="Slider-Gallery-{{ section.id }}"
       class="product__media-list contains-media grid grid--peek list-unstyled slider slider--mobile"
       role="list"
     >
+  
       {%- if product.selected_or_first_available_variant.featured_media != null -%}
         {%- assign featured_media = product.selected_or_first_available_variant.featured_media -%}
         <li
@@ -187,7 +191,10 @@
         aria-controls="GalleryThumbnails-{{ section.id }}"
         data-step="3"
       >
-        {% render 'icon-caret' %}
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M20 12H4M4 12L10 18M4 12L10 6" stroke="#E0E0D6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+</svg>
+
       </button>
       <ul
         id="Slider-Thumbnails-{{ section.id }}"
@@ -311,7 +318,10 @@
         aria-controls="GalleryThumbnails-{{ section.id }}"
         data-step="3"
       >
-        {% render 'icon-caret' %}
+      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M4 12H20M20 12L14 6M20 12L14 18" stroke="#E0E0D6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+      </svg>
+      
       </button>
     </slider-component>
   {%- endif -%}
